- https://github.com/eclipse-syson/syson/issues/571[#571] [interconnection-view] Add ActionUsage node in Interconnection View
- https://github.com/eclipse-syson/syson/issues/581[#581] [interconnection-view] Add documentation and action flow compartment in ActionUsage

=== New features

- https://github.com/eclipse-syson/syson/issues/553[#553] [diagrams] Add "Show/Hide Icons in Diagrams" action in Diagram Panel, allowing to show/hide icons in diagrams (icons are not part of the SysMLv2 specification).
- https://github.com/eclipse-syson/syson/issues/585[#585] [diagrams] Add a new tool allowing to create an _ExhibitState_ at the root of General View and StateTransition View.
This tool shows a dialog allowing to select an existing _State_ to associate to the new _ExhibitState_.
- https://github.com/eclipse-syson/syson/issues/587[#587] [interconnection-view] Handle _FlowConnectionUsage_ between _PortUsages_ in Interconnection View.
A new edge tool allows to create a flow between two ports.

== v2024.7.0

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/298[#298] [syson] Add standard libraries and new models now have a root Namespace to conform with KerML/SysML specifications.
- https://github.com/eclipse-syson/syson/issues/334[#334] [diagrams] Generalization of StateTransition descriptions.
  * Rename `AbstractDiagramDescriptionProvider` `nameGenerator` as `descriptionNameGenerator`. Impacted concrete implementations: `ActionFlowViewDiagramDescriptionProvider`, `GeneralViewDiagramDescriptionProvider`,  `InterconnectionViewForDefinitionDiagramDescriptionProvider`, `InterconnectionViewForUsageDiagramDescriptionProvider`, `StateTransitionViewDiagramDescriptionProvider`.
  * Rename `syson-diagram-statetransition-view` `CompartmentNodeDescriptionProvider` as `StateTransitionActionsCompartmentNodeDescriptionProvider`.
  * `StateTransitionViewEdgeService` removed, services moved to `ViewEdgeService` and `ViewLabelService`.